--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="http://github.com/USERNAME/">
+  <a href="http://github.com/sharkman424/">
     <span class="fas fa-github fa-lg"></span>
      
   </a>
@@ -323,22 +323,19 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="avatar.jpg" style=width:40% class="img-circle"></p>
+<p><img src="IMG_1282.jpg" style=width:40% class="img-circle"></p>
 <p><br></p>
-<div id="welcome-i-am-bevo-xv." class="section level1">
-<h1>Welcome! I am Bevo XV.</h1>
+<div id="welcome-i-am-joshua-dierker." class="section level1">
+<h1>Welcome! I am Joshua Dierker.</h1>
 <p></br></p>
-<div id="i-weigh-almost-one-ton-and-my-horns-are-5-feet-long-from-tip-to-tip." class="section level5">
-<h5>I weigh almost one ton and my horns are ~5 feet long from tip to tip.</h5>
+<div id="i-am-a-third-year-computer-science-major-pursuing-an-applied-statistical-modeling-certificate" class="section level5">
+<h5>I am a third-year Computer Science major pursuing an Applied Statistical Modeling certificate</h5>
 </div>
-<div id="i-enjoy-football-and-chewing-on-various-grasses." class="section level5">
-<h5>I enjoy football and chewing on various grasses.</h5>
+<div id="i-enjoy-listening-to-records-and-collecting-wristwatches." class="section level5">
+<h5>I enjoy listening to records and collecting wristwatches.</h5>
 </div>
-<div id="i-do-not-like-the-uga-bulldog-and-i-do-not-hold-any-advanced-degrees." class="section level5">
-<h5>I do not like the UGA Bulldog and I do not hold any advanced degrees.</h5>
-</div>
-<div id="i-dont-have-any-data-related-projects-either-but-if-i-did-you-could-find-them-here" class="section level5">
-<h5>I don’t have any data-related projects either, but if I did you could find them <a href="/portfolio">here</a>!</h5>
+<div id="you-can-find-my-portfolio-here" class="section level5">
+<h5>You can find my portfolio <a href="/portfolio">here</a>!</h5>
 <hr />
 </div>
 </div>
