--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">My Site</a>
+      <a class="navbar-brand" href="index.html">My Personal Website</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -293,7 +293,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="mailto:&lt;your@email.com&gt;">
+  <a href="mailto:&lt;joshuadierker@gmail.com&gt;">
     <span class="fas fa-envelope fa-lg"></span>
      
   </a>
@@ -305,7 +305,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="http://linkedin.com/USERNAME">
+  <a href="https://www.linkedin.com/in/josh-dierker-125439192/">
     <span class="fas fa-linkedin fa-lg"></span>
      
   </a>
