--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Your Name</title>
+<title>Joshua Dierker</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -300,13 +300,13 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="http://github.com/sharkman424/">
-    <span class="fas fa-github fa-lg"></span>
+    <span class="fab fa-github fa-lg"></span>
      
   </a>
 </li>
 <li>
-  <a href="https://www.linkedin.com/in/josh-dierker-125439192/">
-    <span class="fas fa-linkedin fa-lg"></span>
+  <a href="http://linkedin.com/in/josh-dierker-125439192/">
+    <span class="fab fa-linkedin fa-lg"></span>
      
   </a>
 </li>
@@ -325,8 +325,8 @@ $(document).ready(function () {
 
 <p><img src="IMG_1282.jpg" style=width:40% class="img-circle"></p>
 <p><br></p>
-<div id="welcome-i-am-joshua-dierker." class="section level1">
-<h1>Welcome! I am Joshua Dierker.</h1>
+<div id="welcome-my-name-is-joshua-dierker." class="section level1">
+<h1>Welcome! My name is Joshua Dierker.</h1>
 <p></br></p>
 <div id="i-am-a-third-year-computer-science-major-pursuing-an-applied-statistical-modeling-certificate" class="section level5">
 <h5>I am a third-year Computer Science major pursuing an Applied Statistical Modeling certificate</h5>
