updated LinkedIn url

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="http://linkedin.com/in/josh-dierker-125439192/">
+  <a href="http://linkedin.com/in/joshua-dierker/">
     <span class="fab fa-linkedin fa-lg"></span>
      
   </a>
